--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,17 @@
 body{
-      color: deeppink;
-      text-align: center;
+      color: #333;
+      text-align: left;
       font-family: Arial, Helvetica, sans-serif;
+}
+
+#container{
+      width: 70%;
+      margin: 0 auto;
+      text-align: left;
+      border: 1px solid #ddd;
+      padding: 1em;
+}
+
+#container h1{
+      font-size: 20px;
 }
