--- a/css/estilos.css
+++ b/css/estilos.css
@@ -37,3 +37,15 @@ body {
 #post {
   padding: 1em;
 }
+
+#footer{
+  background: #777;
+  color: #fff;
+  text-align: center;
+  font-weight: 600;
+  padding: 0.5em;
+}
+
+#footer a {
+  color: #fff;
+}
